--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-	"name": "fcc-learn-node-with-express",
-	"version": "0.1.0",
+	"author": "Micaela Schejner Aquino",
+	"name": "fcc-learn-npm-package-json",
+	"description": "curso",
+	"keywords": [
+		"curso",
+		"nodejs",
+		"freecodecamp"
+	],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0",
-		"body-parser": "^1.15.2",
-		"cookie-parser": "^1.4.3",
-		"fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/MicaSchejner/boilerplate-express.git"
 	}
 }
